2008-10-07       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/FIO.mod:  reintroduced
	  InstallTerminationProcedure as p2c does
	  not use FINALLY.  Thus a boottrap error
	  occurred when building gm2/gm2-auto/pg.

2008-10-03       Gaius Mulley <gaius@gnu.org>

	* gm2/examples/iso/socket/client.mod:  improved
	  example program.
	* gm2/gm2-libs/FIO.mod:  tidied up increment and
	  removed InstallTerminationProcedure as the
	  module uses FINALLY instead.
	* gm2/gm2-libs-iso/ClientSocket.mod:  bug fixes.
	* gm2/gm2-libs-iso/IOLink.mod:  UnMakeChan
	  call doFlush and doFree.
	* gm2/gm2-libs-iso/RTdata.mod:  fixed typo bug
	  md should be m.
	* gm2/gm2-libs-iso/RTfio.mod:  iserror must not
	  call EOF.
	* gm2/gm2-libs-iso/RTgen.mod:  checkPostRead call
	  checkErrno.  doLook call doUnReadChar.
	* gm2/gm2-libs-iso/wrapsock.c:  fixed
	  getPushBackChar and setPushBackChar.

2008-10-01       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs-iso/ClientSocket.def:  new file.
	* gm2/gm2-libs-iso/ClientSocket.mod:  new file.
	* gm2/gm2-libs-iso/wrapsock.def:  new file.
	* gm2/gm2-libs-iso/wrapsock.c:  new file.
	* gm2/gm2-libs-iso/ChanConsts.h:  new file.
	* gm2/Make-lang.in:  added wrapsock.c to list of
	  GM2-LIBS-ISO-C files.  Also added ClientSocket.mod
	  to GM2-LIBS-ISO-MODS.
	* gm2/gm2-libs/sckt.def:  tidied up comments.
	* gm2/gm2-libs-iso/ErrnoCategory.c:  use ChanConsts.h.
	* gm2/gm2-libs-iso/SimpleCipher.def:  RemoveCipherLayer
	  new function and fixed destructors.
	* gm2/gm2-libs-iso/Strings.def:  tidied up comments.
	* gm2/examples/iso/socket/Makefile:  new file.
	* gm2/examples/iso/socket/client.mod:  new file.

2008-09-30       Gaius Mulley <gaius@gnu.org>

        * gm2/Make-lang.in:  added ProgramArgs, SimpleCipher,
	  RTData modules to be installed as part of the ISO
	  libraries.
        * gm2/TODO:  updated TODO with outstanding bugs.
        * gm2/gm2.texi:  updated modification date to reflect
	  new modules.